[package]
name = "themethod3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aes = "0.8.3"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
hex = "0.4.3"
log = "0.4.20"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[build-dependencies]
cbindgen = "0.26.0"
csbindgen = "1.9.0"
